force-app/main/default/objects/LLC_BI__Date_Template__c/LLC_BI__Date_Template__c.object-meta.xml
<CustomObject>
    <description>This custom object creates custom date templates, per year, to create recurring events.</description>
    <label>Date Template</label>
    <nameField>
        <label>Date Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Date Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>