force-app/main/default/objects/LLC_BI__Date_Template__c/fields/LLC_BI__Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Frequency_Type__c</fullName>
    <description>Administrators populate this optional picklist field with the frequency type used to categorize the template for integrations and simplified views (for example, Document Preparation). By default, it is blank.</description>
    <inlineHelpText>Select the date frequency type to determine which type of frequency this is (ex. Monthly, Annual, etc.).</inlineHelpText>
    <label>Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Every 2 Months</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>