force-app/main/default/objects/LLC_BI__Date_Template__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>Administrators populate this required picklist field to set the status of the date template. By default, it is In Progress.</description>
    <inlineHelpText>Select the status for this date template</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>