force-app/main/default/objects/LLC_BI__Date_Template__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>Administrators populate this optional picklist field to set the type of the date template. By default, it is blank.</description>
    <inlineHelpText>Select the type for this template</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Covenants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>